overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,body {
+  overflow-x: hidden;
+}
+
+
 body {
   margin: 0;
   min-width: 100vw;
